--- a/greenly/src/app/app.component.html
+++ b/greenly/src/app/app.component.html
@@ -180,6 +180,7 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
+      <h1 class="text-danger">Hello <i class="fa-solid fa-house"></i></h1>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 982 239"
