navbar,routing and components added

--- a/greenly/src/styles.css
+++ b/greenly/src/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap");
 
 :root {
-  --main-color: #0aad0a;
+  --main-color: #177E39;
   --light-color: #f0f3f2;
   --shadow: rgba(145, 158, 171, 0.2) 0px 2px 4px -1px,
     rgba(145, 158, 171, 0.14) 0px 4px 5px 0px,
@@ -87,4 +87,7 @@ a:hover {
 }
 .btn-main:hover {
   background-color: #11bd11;
+}
+.special-font{
+  font-family: Playfair Display;
 }
