home design done

--- a/greenly/src/app/components/footer/footer.component.html
+++ b/greenly/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-main-light py-5">
     <div class="container">
-      <h2 class="m-0 h4">Get The FreshCart App</h2>
+      <h2 class="m-0 h4">Get The Greenly App</h2>
       <p class="text-muted small">
         We Will Send You a Link, Open it on Your Phone to download the app
       </p>
@@ -28,7 +28,7 @@
         </div>
   
         <div class="d-flex align-items-center gap-2">
-          <h3 class="h6 m-0">Get Deliveries with FreshCart</h3>
+          <h3 class="h6 m-0">Get Deliveries with Greenly</h3>
           <img src="./assets/images/get-google-play.png" width="75px" alt="" />
           <img src="./assets/images/get-apple-store.png" width="75px" alt="" />
         </div>
