--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -1,1 +1,108 @@
-<p>home works!</p>
+<section class="home-slider mb-5">
+    <div class="container-fluid p-0">
+        <div class="row g-0">
+            <div class="col-md-12">
+                <owl-carousel-o [options]="mainSlider">
+                    <ng-template carouselSlide class="position-relative">
+                        <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
+                            <h2 class="slider-text text-white special-font">
+                                Protect the beauty of nature</h2>
+                            <p class="w-50 mx-auto">Reconnect with the
+                                beauty of nature and recognize its essential place in our lives. Together, let's
+                                cherish,
+                                protect, and nurture the natural world so its wonders can flourish for generations to
+                                come.
+                            </p>
+                        </div>
+                        <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
+                    </ng-template>
+                    <ng-template carouselSlide class="position-relative">
+                        <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
+                            <h2 class="slider-text text-white special-font">
+                                Protect the beauty of nature</h2>
+                            <p class="w-50 mx-auto">Reconnect with the
+                                beauty of nature and recognize its essential place in our lives. Together, let's
+                                cherish,
+                                protect, and nurture the natural world so its wonders can flourish for generations to
+                                come.
+                            </p>
+                        </div>
+                        <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
+                    </ng-template>
+                    <ng-template carouselSlide class="position-relative">
+                        <div class="img-text position-absolute top-50 start-50 translate-middle text-white w-100">
+                            <h2 class="slider-text text-white special-font">
+                                Protect the beauty of nature</h2>
+                            <p class="w-50 mx-auto">Reconnect with the
+                                beauty of nature and recognize its essential place in our lives. Together, let's
+                                cherish,
+                                protect, and nurture the natural world so its wonders can flourish for generations to
+                                come.
+                            </p>
+                        </div>
+                        <img src="./assets/hero-image.png" alt="Slide 1" class="w-100" />
+                    </ng-template>
+                </owl-carousel-o>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="about-us p-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="left-about-content p-5 pe-0 position-relative">
+                    <h4 class="text-main fs-6 position-absolute">About Us</h4>
+                    <p class="special-font about-main-text">
+                        We help bring your vision of a harmonious world with nature to life.
+                    </p>
+                    <p class="bottom-text">We work to create a harmonious connection between people and nature, helping
+                        bring your vision of
+                        a thriving natural world to life.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div about-imgs class="d-flex gap-2">
+                    <div class="img-1">
+                        <img src="./assets/Image-1.png" class="w-100" />
+                    </div>
+                    <div class="img-2 pt-5">
+                        <img src="./assets/Image.png" class="w-100" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="our-services p-5 mb-5">
+    <div class="container">
+        <div class="position-relative">
+            <h4 class="text-main fs-6 position-absolute top-0">Our Services</h4>
+            <h3 class="special-font w-75 ps-5 pt-3">We provide the best solutions for a thriving and sustainable natural world.</h3>
+        </div>
+        <div class="row px-5">
+            <div class="col-md-4">
+                <div class="inner rounded-3 py-5 px-3">
+                    <img src="./assets/farmer-working-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font mt-5 fs-2">Farmers</h5>
+                    <p>We lead change with smart solutions that accelerate electric vehicle adoption, fostering a cleaner environment and a more sustainable future of transport.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 py-5 px-3">
+                    <img src="./assets/car-side-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font mt-5 fs-2">Electric Cars</h5>
+                    <p>We assist factories in adopting sustainable methods that boost operational efficiency and significantly reduce their overall environmental footprint.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 py-5 px-3">
+                    <img src="./assets/factories-factory-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font mt-5 fs-2">Factories</h5>
+                    <p class="pb-4">We help factories transition to sustainable practices, enhancing efficiency while reducing environmental impact.</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</section>
