--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
           </li>
         </ul>
         <div class="nav-buttons me-4">
-            <button class="btn btn-success special-font-i rounded-3 px-3 py-1" type="button">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+            <button class="btn btn-success special-font-i rounded-3 px-3 py-1" type="button" routerLink="login">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
         </div>
       </div>
     </div>
