--- a/greenly/src/app/components/footer/footer.component.html
+++ b/greenly/src/app/components/footer/footer.component.html
@@ -17,20 +17,20 @@
       <div class="pay-details d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center gap-2">
           <h3 class="h6 m-0">Payment partners</h3>
-          <img src="./assets/images/amazon-pay.png" width="30px" alt="" />
+          <img src="./assets/amazon-pay.png" width="30px" alt="" />
           <img
-            src="./assets/images/American-Express-Color.png"
+            src="./assets/American-Express-Color.png"
             width="30px"
             alt=""
           />
-          <img src="./assets/images/paypal.png" width="30px" alt="" />
-          <img src="./assets/images/mastercard.webp" width="30px" alt="" />
+          <img src="./assets/paypal.png" width="30px" alt="" />
+          <img src="./assets/mastercard.webp" width="30px" alt="" />
         </div>
   
         <div class="d-flex align-items-center gap-2">
           <h3 class="h6 m-0">Get Deliveries with Greenly</h3>
-          <img src="./assets/images/get-google-play.png" width="75px" alt="" />
-          <img src="./assets/images/get-apple-store.png" width="75px" alt="" />
+          <img src="./assets/get-google-play.png" width="75px" alt="" />
+          <img src="./assets/get-apple-store.png" width="75px" alt="" />
         </div>
       </div>
     </div>
