home desogn updated

--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -80,7 +80,7 @@
             <h4 class="text-main fs-6 position-absolute top-0">Our Services</h4>
             <h3 class="special-font w-75 ps-5 pt-3">We provide the best solutions for a thriving and sustainable natural world.</h3>
         </div>
-        <div class="row px-5">
+        <div class="row px-5 g-4 justify-content-center">
             <div class="col-md-4">
                 <div class="inner rounded-3 py-5 px-3">
                     <img src="./assets/farmer-working-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
@@ -100,6 +100,20 @@
                     <img src="./assets/factories-factory-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Factories</h5>
                     <p class="pb-4">We help factories transition to sustainable practices, enhancing efficiency while reducing environmental impact.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 py-5 pb-4 px-3">
+                    <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font mt-5 fs-2">Apply on a loan</h5>
+                    <p class="pb-4">We empower farmers with access to agricultural loans through smart solutions, supporting sustainable farming, improved productivity, and stronger communities in rural agricultural areas.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 py-5 px-3">
+                    <img src="./assets/honey-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font mt-5 fs-2">Apply on apiary license</h5>
+                    <p class="pb-4">We support beekeepers with efficient tools and practices that promote responsible apiary growth, healthier pollinators, and sustainability in agriculture and nature.</p>
                 </div>
             </div>
             
