--- a/greenly/src/app/components/login/login.component.html
+++ b/greenly/src/app/components/login/login.component.html
@@ -1,5 +1,9 @@
 <section>
     <div class="container d-flex justify-content-center align-items-center p-5">
+        @if(responseMessage){<p class="alert p-2 text-center rounded-2 w-50 mx-auto" [ngClass]="{
+            'alert-danger' :   responseMessage != 'success',
+            'alert-success' : responseMessage == 'success'
+        }">{{responseMessage}}</p>}
         <div class="row g-0">
             <div class="col-md-6 p-2">
                 <div class="left-content d-flex justify-content-end">
